# mithril

./: .clang-format  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  NOTICE  README.md  asdasd.py  codecov.yml  license_checker.py  mithril-documentation-improvement-roadmap.md  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  setup.py  test.py  vision.md
.github/: contributors.yml  label_to_devs.yml  labeler.yml  pull_request_template.md  setting_self_hosted_macos_runners.md
.github/ISSUE_TEMPLATE/: bug-report.md  code-refactors.md  create-an-epic.md  feature_request.md  other-issues.md
.github/scripts/: assign_reviewers.py  cc_issue.py
.github/workflows/: add-to-project.yml  auto-move-issue-done.yml  auto-move-pr.yml  auto-move.yml  cc-issue.yml  check-pr-title.yml  ci-test-example.yml  ci-test-macos.yaml  ci-test-ubuntu.yaml  ci-test.yaml  example_tests.yml  pr-label-and-assign.yml  pr-label-assign.yml  pypi-release.yml
benchmarks/: __init__.py
benchmarks/speed_benchmarks/: benchmark.py  (+3 more)
docs/: benchmarks.md  changelog.md  index.md
examples/: t5.py
mithril/: __init__.py  common.py  core.py  types.py
mithril.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
releases/: README.md  generate_changelog.py  prepare_release.py  push_release_log.sh
requirements/: dev.txt
test_examples/: __init__.py  clip_torch.py  flux_torch.py  resnet_torch.py  test_api_examples.py  test_clip.py  test_clip_mlx.py  test_clip_resnet_backbone.py  test_flux.py  test_gpt.py  test_segformer.py  test_t5.py  test_whisper.py
tests/: utils.py
(+375 files in other folders)
